--- a/Client-app/src/app/career-develpment-tools/career-develpment-tools.component.html
+++ b/Client-app/src/app/career-develpment-tools/career-develpment-tools.component.html
@@ -31,7 +31,7 @@
     <div class="text-center pb-5 h2" style="font-weight: 500;"><span class="blue-color">Career Development Tools</span>  to Get You Hired</div>
     <div class="row mb-5">
         <div class="col-md-6 col-sm-12">
-            <img class="img-fluid w-100" src="/assets/ReviewMyResume.png" alt="Get Resume Review" />
+            <img class="img-fluid w-100" src="/assets/ReviewMyResume.png" alt="Get Resume Review" loading="lazy"/>
         </div>
         <div class="col-md-6 col-sm-12 text-left my-auto mx-auto px-5">
             <div class="h4 pb-3">How strong is your resume?</div>
@@ -66,12 +66,12 @@
             <a target="_blank" [href]="link2" class="btn dark-bg white-color mt-3">Write My Resume</a>
         </div>
         <div *ngIf="!isMobile" class="col-md-6 col-sm-12">
-            <img class="img-fluid w-100" src="/assets/WriteMyResume.png" alt="Get Resume Review" />
+            <img class="img-fluid w-100" src="/assets/WriteMyResume.png" alt="Get Resume Review" loading="lazy" />
         </div>
     </div>
     <div class="row py-5">
         <div class="col-md-6 col-sm-12">
-            <img class="img-fluid w-100" src="/assets/MockInterviewPractice.png" alt="Get Resume Review" />
+            <img class="img-fluid w-100" src="/assets/MockInterviewPractice.png" alt="Get Resume Review" loading="lazy" />
         </div>
         <div class="col-md-6 col-sm-12 text-left my-auto mx-auto px-5">
             <div class="h4 pb-3">Master the interview & land a job worth loving.</div>
@@ -106,7 +106,7 @@
             <a target="_blank" [href]="link4" class="btn dark-bg white-color mt-3">Learn New Skill</a>
         </div>
         <div class="col-md-6 col-sm-12">
-            <img class="img-fluid w-100" src="/assets/LearnNewSkill.png" alt="Get Resume Review" />
+            <img class="img-fluid w-100" src="/assets/LearnNewSkill.png" alt="Get Resume Review" loading="lazy" />
         </div>
     </div>
 </section>
@@ -117,7 +117,7 @@
     <div class="text-center h2 pb-5" style="font-weight: 500;">Best career development tools to get you hired</div>
 
      <!-- Tool 1 -->
-    <img class="img-fluid w-100" src="/assets/ReviewMyResume.png" alt="Get Resume Review" />
+    <img class="img-fluid w-100" src="/assets/ReviewMyResume.png" alt="Get Resume Review" loading="lazy" />
     <div class="text-left my-auto mx-auto pt-4 pb-5">
         <div class="h4 pb-3">How strong is your resume?</div>
         <p class="h6" style="font-weight: 300;">
@@ -135,7 +135,7 @@
     </div>
 
     <!-- Tool 2 -->
-    <img class="img-fluid w-100" src="/assets/WriteMyResume.png" alt="Get Resume Review" />
+    <img class="img-fluid w-100" src="/assets/WriteMyResume.png" alt="Get Resume Review" loading="lazy" />
     <div class="text-left my-auto mx-auto pt-4 pb-5">
         <div class="h4 pb-3">Land your next job, faster.</div>
         <p class="h6" style="font-weight: 300;">
@@ -153,7 +153,7 @@
     </div>
 
     <!-- Tool 3 -->
-    <img class="img-fluid w-100" src="/assets/MockInterviewPractice.png" alt="Get Resume Review" />
+    <img class="img-fluid w-100" src="/assets/MockInterviewPractice.png" alt="Get Resume Review" loading="lazy" />
     <div class="text-left my-auto mx-auto pt-4 pb-5">
         <div class="h4 pb-3">Master the interview & land a job worth loving.</div>
         <p class="h6" style="font-weight: 300;">
@@ -171,7 +171,7 @@
     </div>
 
      <!-- Tool 4 -->
-    <img class="img-fluid w-100" src="/assets/LearnNewSkill.png" alt="Get Resume Review" />
+    <img class="img-fluid w-100" src="/assets/LearnNewSkill.png" alt="Get Resume Review" loading="lazy" />
     <div class="text-left my-auto mx-auto pt-4 pb-5">
         <div class="h4 pb-3">Learn New Skills.</div>
         <p class="h6" style="font-weight: 300;">
