--- a/Client-app/src/app/contact-us/contact-us.component.html
+++ b/Client-app/src/app/contact-us/contact-us.component.html
@@ -4,13 +4,13 @@
         <p>Drop Us an email at <a href="mailto:info@workire.com" target="_blank">info@workire.com</a> and we'll get back to as soon as possible, Or reach out through social media platforms</p>
         <div class="icons">
             <a href='https://www.facebook.com/workire' target="_blank" rel="noopener" class="mr-1">
-                <img class="img-fluid" src="/assets/fb.png" width="20" alt="Workire Facebook Page"/>
+                <img class="img-fluid" src="/assets/fb.png" width="20" alt="Workire Facebook Page" loading="lazy" />
             </a>
             <a href='https://www.instagram.com/workire.co' target="_blank" rel="noopener" class="mx-2">
-                <img class="img-fluid" src="/assets/insta.png" width="20" alt="Workire Instagram"/>
+                <img class="img-fluid" src="/assets/insta.png" width="20" alt="Workire Instagram" loading="lazy" />
             </a>
             <a href='https://www.linkedin.com/company/workire/' rel="noreferrer" target="_blank" class="mx-2">
-              <img class="img-fluid" src="/assets/in.png" width="20" rel="noopener" alt="Workire LinkedIn"/>
+              <img class="img-fluid" src="/assets/in.png" width="20" rel="noopener" alt="Workire LinkedIn" loading="lazy" />
             </a>
         </div>
     </div>
@@ -22,13 +22,13 @@
         <p>Drop Us an email at <a href="mailto:info@workire.com" target="_blank">info@workire.com</a> and we'll get back to as soon as possible, Or reach out through social media platforms</p>
         <div class="icons">
             <a href='https://www.facebook.com/workire' target="_blank" rel="noopener" class="mr-1">
-                <img class="img-fluid" src="/assets/fb.png" width="20" alt="Workire Facebook Page"/>
+                <img class="img-fluid" src="/assets/fb.png" width="20" alt="Workire Facebook Page" loading="lazy" />
             </a>
             <a href='https://www.instagram.com/workire.co' target="_blank" rel="noopener" class="mx-2">
-                <img class="img-fluid" src="/assets/insta.png" width="20" alt="Workire Instagram"/>
+                <img class="img-fluid" src="/assets/insta.png" width="20" alt="Workire Instagram" loading="lazy" />
             </a>
             <a href='https://www.linkedin.com/company/workire/' rel="noreferrer" target="_blank" class="mx-2">
-              <img class="img-fluid" src="/assets/in.png" width="20" rel="noopener" alt="Workire LinkedIn"/>
+              <img class="img-fluid" src="/assets/in.png" width="20" rel="noopener" alt="Workire LinkedIn" loading="lazy" />
             </a>
         </div>
     </div>
