--- a/Client-app/src/app/custom-resume-page/custom-resume-page.component.html
+++ b/Client-app/src/app/custom-resume-page/custom-resume-page.component.html
@@ -4,7 +4,7 @@
         <h2 class="h5 font-weight-regular text-center text-white">Our professional resume-writing service has helped <strong class="text-warning"> over <br> 600,000 professionals </strong>land more interviews and get hired faster.
         </h2>
         <a href="https://www.trustpilot.com/review/topresume.com" target="_blank" style="display: flex;justify-content: center;" class="pb-5">
-            <img class="img-fluid" src="/assets/trust.png" width="450" />
+            <img class="img-fluid" src="/assets/trust.png" width="450" loading="lazy" />
         </a>
     </div>
     <div class="row" [ngClass]="{'px-5':!isMobile,'mx-5':!isMobile,'mx-1':isMobile}">
@@ -50,21 +50,21 @@
     <h4 class="py-5 text-center h4" style="font-weight: 600;">How it works</h4>
     <div class="row" style="display: flex;justify-content: center;">
         <div class="col-auto px-5">
-            <img class="img-fluid" width="200" src="assets/1.svg" />
+            <img class="img-fluid" width="200" src="assets/1.svg" loading="lazy" />
             <div class="text-center" style="width: 20;">
                 <strong style="font-weight:600;">Get matched</strong>
                 with <br> an expert writer
             </div>
         </div>
         <div class="col-auto px-5">
-            <img class="img-fluid" width="200" src="assets/2.svg" />
+            <img class="img-fluid" width="200" src="assets/2.svg" loading="lazy" />
             <div class="text-center" style="width: 20;">
                 <strong style="font-weight:600;">Work one-on-one</strong>
                  to craft<br> your career story
             </div>
         </div>
         <div class="col-auto mx-5">
-            <img class="img-fluid" width="200" src="assets/3.svg" />
+            <img class="img-fluid" width="200" src="assets/3.svg" loading="lazy" />
             <div class="text-center"><strong style="font-weight:600;">Receive a resume </strong>
                  tailored <br> to your goals</div>
         </div>
@@ -78,7 +78,7 @@
             <h3 class="h5 text-muted py-2 text-left"  style="font-size: medium;">Workire has partnered with TopResume, one of the leading Professional resume writing services, to offer special discounted pricing to the professionals who use our site. TopResume's team of Certified Professional Resume Writers have years of experience reviewing resumes. With their Professional resume writing services support, you'll get the resume you need in order to take the next step in your career.</h3>
         </div>
         <div class="col-md-3 col-sm-12 shadow rounded pb-4">
-            <img class="img-fluid mx-5 my-3" src="/assets/icons/topresume.webp" alt="topresume">
+            <img class="img-fluid mx-5 my-3" src="/assets/icons/topresume.webp" alt="topresume" loading="lazy" >
             <h2 class="text-muted" style="font-size:medium;">Professional Resume writing sevices are provided by TopResume, a trusted partner of Workire</h2>
             <hr />
             <div class="h4 font-weight-bold">Questions?</div>
@@ -101,7 +101,7 @@
     <div *ngFor="let i of cust" class="col-lg-4 col-md-6 col-sm-12 mb-3">
         <hr width="200"/>
         <div style="display: flex;justify-content: center;">
-            <img class="img-fluid" width="100" src={{i.logo}} />
+            <img class="img-fluid" width="100" src={{i.logo}} loading="lazy" />
         </div>
         <div class="my-1" style="display: flex;justify-content: center;">
             <svg id="stars-4-5" style="fill: #0da1ec;" width="100" viewBox="0 0 663 120" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"><path class="gcst0" d="M653.6 44.1h-39.1L601.2 5.7c-.6-1.9-3.2-1.9-3.8 0l-12.6 39.7h-39.7c-1.9 0-3.2 2.5-1.3 3.8L576 72.5l-12 37.2c-.6 1.9 1.9 3.8 3.2 2.5l31.5-24 32.8 23.3c1.9 1.3 3.8-.6 3.2-2.5l-12-37.8 32.2-23.3c1.9-1.3.6-3.8-1.3-3.8z"></path><path d="M112.9 44.1H73.8L60.6 5.7c-.6-1.9-3.2-1.9-3.8 0L44.2 45.4H4.4c-1.9 0-3.2 2.5-1.3 3.8l32.2 23.3-12 37.2c-.6 1.9 1.9 3.8 3.2 2.5l31.5-24 32.8 23.3c1.9 1.3 3.8-.6 3.2-2.5L82 71.2l32.2-23.3c1.9-1.3.6-3.8-1.3-3.8zM248.2 44.1H209L195.8 5.7c-.6-1.9-3.2-1.9-3.8 0l-12.6 39.7h-39.7c-1.9 0-3.2 2.5-1.3 3.8l32.2 23.3-12 37.2c-.6 1.9 1.9 3.8 3.2 2.5l31.5-24 32.8 23.3c1.9 1.3 3.8-.6 3.2-2.5l-12-37.8 32.2-23.3c1.8-1.3.5-3.8-1.3-3.8zM383.4 44.1h-39.1L331.1 5.7c-.6-1.9-3.2-1.9-3.8 0l-12.6 39.7H275c-1.9 0-3.2 2.5-1.3 3.8l32.2 23.3-12 37.2c-.6 1.9 1.9 3.8 3.2 2.5l31.5-24 32.8 23.3c1.9 1.3 3.8-.6 3.2-2.5l-12-37.8 32.2-23.3c1.8-1.3.5-3.8-1.4-3.8zM518.5 44.1h-39.1L466.2 5.7c-.6-1.9-3.2-1.9-3.8 0l-12.6 39.7H410c-1.9 0-3.2 2.5-1.3 3.8l32.2 23.3-12 37.2c-.6 1.9 1.9 3.8 3.2 2.5l31.5-24 32.8 23.3c1.9 1.3 3.8-.6 3.2-2.5l-12-37.8 32.2-23.3c1.9-1.3.6-3.8-1.3-3.8zM599.4 4.2c-.8 0-1.6.5-1.9 1.4l-12.6 39.7h-39.7c-1.9 0-3.2 2.5-1.3 3.8L576 72.5l-12 37.2c-.6 1.9 1.9 3.8 3.2 2.5l31.5-24 .7-84z"></path></svg>
@@ -124,7 +124,7 @@
         </blockquote>
         <hr width="180"/>
         <div style="display: flex;justify-content: center;">
-            <img class="img-fluid" width="100" src={{i.logo}} />
+            <img class="img-fluid" width="100" src={{i.logo}} loading="lazy" />
         </div>
         <div class="my-1" style="display: flex;justify-content: center;">
             <svg id="stars-4-5" style="fill: #0da1ec;" width="100" viewBox="0 0 663 120" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"><path class="gcst0" d="M653.6 44.1h-39.1L601.2 5.7c-.6-1.9-3.2-1.9-3.8 0l-12.6 39.7h-39.7c-1.9 0-3.2 2.5-1.3 3.8L576 72.5l-12 37.2c-.6 1.9 1.9 3.8 3.2 2.5l31.5-24 32.8 23.3c1.9 1.3 3.8-.6 3.2-2.5l-12-37.8 32.2-23.3c1.9-1.3.6-3.8-1.3-3.8z"></path><path d="M112.9 44.1H73.8L60.6 5.7c-.6-1.9-3.2-1.9-3.8 0L44.2 45.4H4.4c-1.9 0-3.2 2.5-1.3 3.8l32.2 23.3-12 37.2c-.6 1.9 1.9 3.8 3.2 2.5l31.5-24 32.8 23.3c1.9 1.3 3.8-.6 3.2-2.5L82 71.2l32.2-23.3c1.9-1.3.6-3.8-1.3-3.8zM248.2 44.1H209L195.8 5.7c-.6-1.9-3.2-1.9-3.8 0l-12.6 39.7h-39.7c-1.9 0-3.2 2.5-1.3 3.8l32.2 23.3-12 37.2c-.6 1.9 1.9 3.8 3.2 2.5l31.5-24 32.8 23.3c1.9 1.3 3.8-.6 3.2-2.5l-12-37.8 32.2-23.3c1.8-1.3.5-3.8-1.3-3.8zM383.4 44.1h-39.1L331.1 5.7c-.6-1.9-3.2-1.9-3.8 0l-12.6 39.7H275c-1.9 0-3.2 2.5-1.3 3.8l32.2 23.3-12 37.2c-.6 1.9 1.9 3.8 3.2 2.5l31.5-24 32.8 23.3c1.9 1.3 3.8-.6 3.2-2.5l-12-37.8 32.2-23.3c1.8-1.3.5-3.8-1.4-3.8zM518.5 44.1h-39.1L466.2 5.7c-.6-1.9-3.2-1.9-3.8 0l-12.6 39.7H410c-1.9 0-3.2 2.5-1.3 3.8l32.2 23.3-12 37.2c-.6 1.9 1.9 3.8 3.2 2.5l31.5-24 32.8 23.3c1.9 1.3 3.8-.6 3.2-2.5l-12-37.8 32.2-23.3c1.9-1.3.6-3.8-1.3-3.8zM599.4 4.2c-.8 0-1.6.5-1.9 1.4l-12.6 39.7h-39.7c-1.9 0-3.2 2.5-1.3 3.8L576 72.5l-12 37.2c-.6 1.9 1.9 3.8 3.2 2.5l31.5-24 .7-84z"></path></svg>
@@ -142,6 +142,6 @@
         </h6>
     </div>
     <div style="display: flex;justify-content: center;width: 100%;">
-        <img class="img-fluid" src="assets/client.png" />
+        <img class="img-fluid" src="assets/client.png" loading="lazy" />
     </div>
 </div>
