--- a/Client-app/src/app/job-footer/job-footer.component.html
+++ b/Client-app/src/app/job-footer/job-footer.component.html
@@ -29,31 +29,31 @@
           <!-- Content -->
           <a href="/">
             <!-- Logo Image -->
-            <img src="/assets/Workire-jobs-uk-uae-qatar-dubai-london.svg" title="Home" width="150" alt="Workire" class="d-inline-block align-middle mb-2" alt="Workire" />
+            <img src="/assets/Workire-jobs-uk-uae-qatar-dubai-london.svg" title="Home" width="150" alt="Workire" class="d-inline-block align-middle mb-2" alt="Workire" loading="lazy" />
             <!-- Logo Text -->
           </a>
           <p class="text-muted">Workire is a free job site that posts jobs in the UK, UAE, Qatar, Dubai, and London as well as provides access to career advice and development tools.Giving regular job updates, we help job seekers grab their dream career.</p>
           <div class="d-flex-inline mb-3" *ngIf="!isMobile">
             <a href='https://www.facebook.com/workire' rel="noreferrer" target="_blank" class="mr-1">
-                <img class="img-fluid" src="/assets/fb.png" width="20" alt="Workire Facebook Page"/>
+                <img class="img-fluid" src="/assets/fb.png" width="20" alt="Workire Facebook Page" loading="lazy" />
             </a>
             <a href='https://www.instagram.com/workire.co' rel="noreferrer" target="_blank" class="mx-2">
-                <img class="img-fluid" src="/assets/insta.png" width="20" rel="noopener" alt="Workire Instagram"/>
+                <img class="img-fluid" src="/assets/insta.png" width="20" rel="noopener" alt="Workire Instagram" loading="lazy" />
             </a>
             <a href='https://www.linkedin.com/company/workire/' rel="noreferrer" target="_blank" class="mx-2">
-              <img class="img-fluid" src="/assets/in.png" width="20" rel="noopener" alt="Workire LinkedIn"/>
+              <img class="img-fluid" src="/assets/in.png" width="20" rel="noopener" alt="Workire LinkedIn" loading="lazy" />
             </a>
           </div>
 
           <div style="display: flex;justify-content: center;" *ngIf="isMobile">
             <a href='https://www.facebook.com/workire' target="_blank" rel="noopener" class="mr-1">
-                <img class="img-fluid" src="/assets/fb.png" width="20" alt="Workire Facebook Page"/>
+                <img class="img-fluid" src="/assets/fb.png" width="20" alt="Workire Facebook Page" loading="lazy" />
             </a>
             <a href='https://www.instagram.com/workire.co' target="_blank" rel="noopener" class="mx-2">
-                <img class="img-fluid" src="/assets/insta.png" width="20" alt="Workire Instagram"/>
+                <img class="img-fluid" src="/assets/insta.png" width="20" alt="Workire Instagram" loading="lazy" />
             </a>
             <a href='https://www.linkedin.com/company/workire/' rel="noreferrer" target="_blank" class="mx-2">
-              <img class="img-fluid" src="/assets/in.png" width="20" rel="noopener" alt="Workire LinkedIn"/>
+              <img class="img-fluid" src="/assets/in.png" width="20" rel="noopener" alt="Workire LinkedIn" loading="lazy" />
             </a>
           </div>
 
