--- a/Client-app/src/app/job-page/job-page.component.html
+++ b/Client-app/src/app/job-page/job-page.component.html
@@ -130,7 +130,7 @@
                 </div>
                 <div class="mb-5 shadow">
                     <img [routerLink]="['/Career-development-tools']" class="img-fluid rounded"
-                        src="/assets/LevelUpYourCareer.jpeg" style="cursor: pointer;" alt="Level Up Your Career" />
+                        src="/assets/LevelUpYourCareer.jpeg" style="cursor: pointer;" alt="Level Up Your Career" loading="lazy" />
                 </div>
             </div>
         </div>
