--- a/Client-app/src/app/share-buttons/share-buttons.component.html
+++ b/Client-app/src/app/share-buttons/share-buttons.component.html
@@ -1,11 +1,11 @@
 <div class="d-flex-inline my-auto" style="display: flex;justify-content: right;">
     <a [href]='fb' target="_blank" class="mx-1">
-        <img class="img-fluid" src="/assets/fb_square.png" width="28"/>
+        <img class="img-fluid" src="/assets/fb_square.png" width="28" loading="lazy" />
     </a>
     <a [href]='twitter' target="_blank" class="mx-1">
-        <img class="img-fluid" src="/assets/twitter_square.png" width="28"/>
+        <img class="img-fluid" src="/assets/twitter_square.png" width="28" loading="lazy" />
     </a>
     <a [href]='in' target="_blank" class="mx-1">
-        <img class="img-fluid" src="/assets/linkedin_square.png" width="25"/>
+        <img class="img-fluid" src="/assets/linkedin_square.png" width="25" loading="lazy" />
     </a>
 </div>
