--- a/Client-app/src/app/job-blog-list/job-blog-list.component.html
+++ b/Client-app/src/app/job-blog-list/job-blog-list.component.html
@@ -18,7 +18,7 @@
         <div class="row">
             <div *ngFor="let k of data" class="curse col-12 col-sm-12 col-md-6 col-lg-4 pb-4">
                 <div class="card shadow-sm h-100" [routerLink]="['/latest-jobs',k.slug]">
-                    <img class="card-img" src={{urlParse(k.image)}} alt={{k.title}} height="240px">
+                    <img class="card-img" src={{urlParse(k.image)}} alt={{k.title}} height="240px" loading="lazy" >
                     <div class="card-img-overlay">
                         <button (click)="catgoryClick(k.category)" class="btn btn-light btn-sm">{{k.category}}</button>
                     </div>
